<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/config_text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigureRoutineActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A1A1A1"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextAppearance="@style/Toolbar.TitleText"></androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/routine_setup_text"
        android:textSize="10pt"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EditTextCommand"
        android:layout_width="210dp"
        android:layout_height="46dp"
        android:inputType="textPersonName"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605"></EditText>


    <TextView
        android:id="@+id/TextViewRoutineName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/routine_name_text"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197"></TextView>

    <TextView
        android:id="@+id/TextViewCommand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/command"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601"></TextView>

    <EditText
        android:id="@+id/EditTextRoutineName"
        android:layout_width="210dp"
        android:layout_height="46dp"
        android:inputType="textPersonName"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.855"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192"></EditText>


    <TextView
        android:id="@+id/TextViewTriggerLocationAlias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trigger_location_text"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.318"></TextView>

    <Spinner
        android:id="@+id/SpinnerTriggerLocationAlias"
        android:layout_width="210dp"
        android:layout_height="44dp"
        android:entries="@array/locationslist"
        android:prompt="@string/location_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311"></Spinner>

    <CheckBox
        android:id="@+id/CheckBoxStatus"
        android:layout_width="30dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.688"></CheckBox>

    <TextView
        android:id="@+id/TextViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enabled_text"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683"></TextView>

    <Button
        android:id="@+id/button_save_routine_config"
        android:layout_width="208dp"
        android:layout_height="45dp"
        android:text="@string/save_routine_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.801" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="309dp"
        android:layout_height="32dp"
        android:layout_marginTop="308dp"
        android:animationResolution="@android:integer/config_shortAnimTime"
        android:background="#DCDBE6"
        android:max="100"
        android:progress="25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextViewGenerating"
        android:layout_width="155dp"
        android:layout_height="29dp"
        android:layout_marginTop="268dp"
        android:text="@string/generating"
        android:textSize="8pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.335"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/refresh" />

</androidx.constraintlayout.widget.ConstraintLayout>